--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "angular-resource": "1.2.32",
     "blueimp-md5": "^2.10.0",
     "echarts": "^2.2.8",
+    "js-sha256": "^0.9.0",
     "normalize.css": "^8.0.1"
   },
   "devDependencies": {
